--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h2>hello world!!!!!!!!!!!!!</h2>
-    <a href="first.html">First Paage</a>
+    <a href="first.html">First Page</a>
 </body>
 </html>
+<!--1.git add .
+    2. git commit -m "statement"
+    3.git push -->
