--- a/first.html
+++ b/first.html
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First page</title>
 </head>
+
 <body>
     <h2>odered List</h2>
-   <ol>
-    <li>sivakumar</li>
-    <li>sankar</li>
-    <li>jeyakathick</li>
-    <li>karthikeyan</li>
-   </ol>
-   <h2>Unordered List</h2>
-   <ul>
-    <li>IT</li>
-    <li>CSE</li>
-    <li>AIML</li>
-    <li>AIDS</li>
-   </ul>
-   <table border="2">
-    <tr>
-    <th>Name</th>
-    <th>Class</th>
-    <th>Roll</th>
-    </tr>
-   <tr>
-    <td>siva</td>
-    <td>IT</td>
-    <td>135</td>
-   </tr> 
-    <tr>
-    <td>sankar</td>
-    <td>IT</td>
-    <td>125</td>
-   </tr> 
-   </table>
-   <h1>vedio Session</h1>
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/zA9r5zTllx4?si=N-pQdanU7wTpA3ur" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <ol>
+        <li>sivakumar</li>
+        <li>sankar</li>
+        <li>jeyakathick</li>
+        <li>karthikeyan</li>
+    </ol>
+    <h2>Unordered List</h2>
+    <ul>
+        <li>IT</li>
+        <li>CSE</li>
+        <li>AIML</li>
+        <li>AIDS</li>
+    </ul>
+    <table border="2">
+        <tr>
+            <th>Name</th>
+            <th>Class</th>
+            <th>Roll</th>
+        </tr>
+        <tr>
+            <td>siva</td>
+            <td>IT</td>
+            <td>135</td>
+        </tr>
+        <tr>
+            <td>sankar</td>
+            <td>IT</td>
+            <td>125</td>
+        </tr>
+    </table>
+    <h1>vedio Session</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/zA9r5zTllx4?si=N-pQdanU7wTpA3ur"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
+
 </html>
