--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h2>hello world!!!!!!!!!!!!!</h2>
     <a href="first.html">First Page</a>
 </body>
+
 </html>
 <!--1.git add .
     2. git commit -m "statement"
-    3.git push -->
+    3.git push 
+    after this cmds reload the entire page og gitup thansee the o/p. -->
