--- a/project/index.html
+++ b/project/index.html
@@ -38,7 +38,7 @@
       <div class="hero-content">
         <div class="hero-text">
           <span class="greeting">Hello, I'm</span>
-          <h1 class="hero-title">Sivakumar P</h1>
+          <h1 class="hero-title">SIVAKUMAR P</h1>
           <p class="hero-subtitle">Full Stack Developer & UI/UX Designer</p>
           <p class="hero-description">
             I craft beautiful, functional digital experiences using modern web technologies.
@@ -73,7 +73,7 @@
           </div>
         </div>
         <div class="hero-visual">
-          <div class="floating-card"><img src="./src/components/image.png"></div>
+          <div class="floating-card"><img src="./src/components/image1.jpg" style="width: 300px;height:400px"></div>
         </div>
       </div>
     </section>
@@ -207,7 +207,7 @@
 
     <section id="projects" class="projects">
       <div class="container">
-        <h2 class="section-title">Featured Projects</h2>
+        <h2 class="section-title">My Projects</h2>
         <div class="projects-grid">
           <div class="project-card">
             <div class="project-status">In Progress</div>
